# postgres_database_5_course

./: README.md  main.py  pyproject.toml  queries.sql
src/: config.py  dbmanager.py  fill_db.py  hh_api.py
